# selfie-hacks

./: Dockerfile  README.md
dnd-backend/resources/: logins
dnd-backend/src/: login.py
docker/: Dockerfile  Dockerfile-bkup  Dockerfile-race  Dockerfile-ravi  bashrc
yew-app/: Cargo.toml
yew-app/src/: lib.txt  main.rs  video_struct.rs
