[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.81"
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
anyhow = "1.0.58"
yew-router = "0.16.0"